fixed google font import

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>LipCo</title>
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=Open+Sans&family=Source+Code+Pro&family=Yeseva+One&display=swap')
+      @import url('https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=Open+Sans&family=Source+Code+Pro&family=Yeseva+One&display=swap');
     </style>
   </head>
   <body>
