--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="LipCo Development"
+      content="Web Development by Phillip 'Lip' Cowan"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>LipCo</title>
